added more places to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -813,7 +813,7 @@
                 rating: "4.5/5"
             },
             {
-                id: 22,
+                id: 23,
                 name: "The LaLiT, Rajiv Gandhi IT Park",
                 location: [30.73061637751608, 76.8412475676239],
                 type: "hotels",
@@ -825,7 +825,7 @@
                 rating: "4.4/5"
             },
             {
-                id: 22,
+                id: 24,
                 name: "Swagath, Sector 26",
                 location: [30.728485944115278, 76.80254755716716],
                 type: "restaurant",
@@ -835,6 +835,76 @@
                 openingHours: "11 AM – 2 AM",
                 website: "https://swagath.net/",
                 rating: "4.3/5"
+            },
+            {
+                id: 25,
+                name: "Blue Tokai Coffee Roasters, Sector 8",
+                location: [30.740079450109988, 76.79258533364188],
+                type: "cafe",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMAl01RO3zbql_iTdPOuBSqzV737ZZobt0Jaj37=w400-h400-k-no",
+                description: "Specialty coffee roasters with a cafe serving artisanal coffee & light bites in a modern space.",
+                price: "medium",
+                openingHours: "7 AM – 11 AM",
+                website: "https://bluetokaicoffee.com/",
+                rating: "4.4/5"
+            },
+            {
+                id: 26,
+                name: "Kake Da Hotel, Sector 28",
+                location: [30.719082797608593, 76.80163740697917],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu0KxJ3MtAlzllviHG93qq-bdChtDSdfAeHhIU2ZWkA9idvmrTif6Bxf1TzhAwT9ncBePVMHQhmPkhDBY-a9ZIkX133cJSbzPOVwLEjIDc4Xp7UqQPfVNLu71rUM6-qXUkx6hcYazA=w400-h533-k-no",
+                description: "Punjabi restaurant known for its delicious North Indian cuisine.",
+                price: "medium",
+                openingHours: "11 AM – 2 AM",
+                website: "https://www.kdhkakedahotel.com/",
+                rating: "4.8/5"
+            },
+            {
+                id: 27,
+                name: "Le Corbusier Centre, Sector 19",
+                location: [30.729831415609635, 76.7995062447861],
+                type: "museum",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMgyfd3mv6o0qkPkWF4Pxxv-JhURwq1aeASRQfM=w400-h400-k-no",
+                description: "Once the workplace of the architect Le Corbusier, this historic building traces the city's heritage.",
+                price: "low",
+                openingHours: "10 AM – 6 PM",
+                website: "https://chandigarhtourism.gov.in/pages/museums/le_corbusier_centre/",
+                rating: "4.4/5"
+            },
+            {
+                id: 28,
+                name: "Japanese Garden, Sector 31",
+                location: [30.7045281030937, 76.78428513459814],
+                type: "park",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPY4FltBioe4TQiYp8Zgne4Vgype3UsbMi0JpSq=w400-h323-k-no",
+                description: "Japanese-themed park on 13 acres with gardens, pagodas & sculptures, plus eateries & water features.",
+                openingHours: "5:00 AM – 9:00 PM",
+                rating: "4.5/5"
+            },
+            {
+                id: 29,
+                name: "Pierre Jeanneret Museum, Sector 5",
+                location: [30.744790754715176, 76.80758614626819],
+                type: "museum",
+                price: "low",
+                website: "https://chandigarhtourism.gov.in/pages/museums/jeanneret",
+                image: "https://lh3.googleusercontent.com/p/AF1QipNY5glwm-wXiZR8DUIMB3brvM2mWDqAzKZ40Ou0=w400-h533-k-no",
+                description: "Pierre Jeanneret, a chief architect of the city, lived in Chandigarh for 11 years in House number 57, Sector 5, to assist and advise the local government. For honouring his contribution and keeping his memory alive, his house was converted into a museum.",
+                openingHours: "10:00 AM – 5:00 PM",
+                rating: "4.5/5"
+            },
+            {
+                id: 30,
+                name: "Bird Park - Aviary, Sector 1",
+                location: [30.75199323543729, 76.81192811946956],
+                type: "park",
+                price: "low",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu33cItp59s8auT8FhceJLrWI9ncHkEi4wuwBsHqO6O3vj7OqYcnxo7oarMkE83l7bqki8XGbQ1HEPrKX_cN4dZV252i350F-ZFHMHoTj2v1WHP9f-F4HQfboXIrnFIdcUigZ2Jw=w400-h300-k-no",
+                description: "A beautiful park with a variety of birds and lush greenery.",
+                website: "https://chandigarhtourism.in/city-forest-chandigarh",
+                openingHours: "8:00 AM – 6:00 PM",
+                rating: "4.5/5"
             }
 
         ];
