added meta description

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore Chandigarh & Tricity with our interactive map! Find top restaurants, cafes, museums, tourist spots, and hidden gems. Perfect for travelers and locals to discover the best places in Chandigarh, Mohali & Panchkula.">
     <link rel="stylesheet" href="/css/navbar.css">
-    <title>Chandigarh Tourist Map</title>
+    <title>Explore Chandigarh Tricity with Our Interactive Map</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VS2WHLJQNE"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
