added more to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -906,6 +906,29 @@
                 website: "https://chandigarhtourism.in/city-forest-chandigarh",
                 openingHours: "8:00 AM – 6:00 PM",
                 rating: "4.5/5"
+            },
+            {
+                id: 31,
+                name: "Sagar Ratna, Sector 66, SAS Nagar",
+                location: [30.657436877201143, 76.73904142046356],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu0xef28uIrk7OsIJo51PADzs7ynAA-Yz4CxsXiuskAFrrMSq103YjgcqfTmpv-y-Abgf9tjeujAtCCnbvcavLqb9jA5iH4RUU8-1arhjx5-6q8kUN5WXmu8LMlweSw1oBrEVSPwtg=w400-h225-k-no",
+                description: "Famous for its South Indian cuisine, especially dosa and idli.",
+                price: "high",
+                openingHours: "11 AM – 11 PM",
+                website: "https://sagarratna.in/",
+                rating: "4.1/5"
+            },
+            {
+                id: 32,
+                name: "Naidu South Indian Food,Sector 9, Panchukula",
+                location: [30.694069680981652, 76.845334096063],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMvKLw8lHgXajLx7uQoW05-KR4AD5Ayx5JuWcgc=w400-h300-k-no",
+                description: "Famous for its South Indian cuisine, especially dosa and idli.",
+                price: "medium",
+                openingHours: "9 AM – 10:30 PM",
+                rating: "4.1/5"
             }
 
         ];
