added more to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -921,7 +921,7 @@
             },
             {
                 id: 32,
-                name: "Naidu South Indian Food,Sector 9, Panchukula",
+                name: "Naidu South Indian Food, Sector 9, Panchukula",
                 location: [30.694069680981652, 76.845334096063],
                 type: "restaurant",
                 image: "https://lh3.googleusercontent.com/p/AF1QipMvKLw8lHgXajLx7uQoW05-KR4AD5Ayx5JuWcgc=w400-h300-k-no",
@@ -929,6 +929,30 @@
                 price: "medium",
                 openingHours: "9 AM – 10:30 PM",
                 rating: "4.1/5"
+            },
+            {
+                id: 33,
+                name: "Barbeque Nation, Sector 26",
+                location: [30.72602204446753, 76.80491118868574],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipONLbjtlZ-g97vHU9yya_ASkR-msCM3zE2RroaU=w400-h225-k-no",
+                description: "Popular chain for grilled meats & buffet dining in a casual setting.",
+                website: "https://www.barbequenation.com/",
+                price: "high",
+                openingHours: "12 PM – 11 PM",
+                rating: "4.4/5"
+            },
+            {
+                id: 34,
+                name: "Anardana, Industrial Area Phase 1",
+                location: [30.709546507777628, 76.80093388034669],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipN8_8ajpdMOhHKZxK5yXmyHBZjR-pcMiO3ljQAs=w400-h266-k-no",
+                description: "Eclectic international dishes & cocktails prepped in a sophisticated venue with a swanky vibe.",
+                website: "https://anardana.in/",
+                price: "high",
+                openingHours: "12 PM – 12 AM",
+                rating: "4.7/5"
             }
 
         ];
