added more to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -953,7 +953,32 @@
                 price: "high",
                 openingHours: "12 PM – 12 AM",
                 rating: "4.7/5"
+            },
+            {
+                id: 35,
+                name: "Backpackers Cafe, Sector 8",
+                location: [30.740156760860152, 76.79251202740949],
+                type: "cafe",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMSl9JChGMSKy8EimamPVulBw55OCvYeghxJ4Q9=w400-h301-k-no",
+                description: "A cozy cafe with a relaxed atmosphere, serving a variety of snacks and beverages.",
+                website: "https://anardana.in/",
+                price: "high",
+                openingHours: "8:30 AM – 11:45 PM",
+                rating: "4.3/5"
+            },
+            {
+                id: 36,
+                name: "Karthik South Indian Restaurant, Sector 47",
+                location: [30.69736938402244, 76.76715985581636],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPHWMc3VVJ6CDMhCi9W9dbF2ApLtb8XPD-aX8H9=w400-h225-k-no",
+                description: "Famous for its South Indian cuisine, especially dosa and idli.",
+                website: "https://anardana.in/",
+                price: "medium",
+                openingHours: "8:00 AM – 10:30 PM",
+                rating: "4.2/5"
             }
+
 
         ];
         
