--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -972,10 +972,43 @@
                 location: [30.69736938402244, 76.76715985581636],
                 type: "restaurant",
                 image: "https://lh3.googleusercontent.com/p/AF1QipPHWMc3VVJ6CDMhCi9W9dbF2ApLtb8XPD-aX8H9=w400-h225-k-no",
-                description: "Famous for its South Indian cuisine, especially dosa and idli.",
+                description: "Famous for its South Indian cuisine, especially dosa and idli. They have many chains within the city",
                 price: "medium",
                 openingHours: "8:00 AM – 10:30 PM",
                 rating: "4.2/5"
+            },
+            {
+                id: 37,
+                name: "Baba Dairy, Sector 21",
+                location: [30.724478385331548, 76.77870615781615],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPmM5E8gKzuMcl6hyr-yP8kbrcoQAuulShpWHRi=w400-h264-k-no",
+                description: "Famous for its Sweets and North Indian cuisines, especially paneer dishes.",
+                price: "medium",
+                openingHours: "9:00 AM – 10:00 PM",
+                rating: "4.3/5"
+            },
+            {
+                id: 38,
+                name: "Degchi, Sector 6, Panchkula",
+                location: [30.705926998137162, 76.85699565823126],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipP2o3sYgxqUV0SYqRPLFtpJjYow33bbtpOAM-8A=w400-h224-k-no",
+                description: "One of the oldest and most popular restaurants in Panchkula, known for its North Indian cuisine.",
+                price: "medium",
+                openingHours: "11:30 AM – 11:00 PM",
+                rating: "4.1/5"
+            },
+            {
+                id: 39,
+                name: "Softy Corner, Sector 17",
+                location: [30.74064712132779, 76.78159196317702],
+                type: "fastfood",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMZlIbbVhfCJP1EOwerjqKhFgtvaV1iFdikzxc3=w400-h533-k-no",
+                description: "One of the oldest and most popular ice cream parlors in Chandigarh, known for its softy ice cream.",
+                price: "low",
+                openingHours: "11:00 AM – 09:30 PM",
+                rating: "4.4/5"
             }
 
 
