added more to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -1009,6 +1009,61 @@
                 price: "low",
                 openingHours: "11:00 AM – 09:30 PM",
                 rating: "4.4/5"
+            },
+            {
+                id: 40,
+                name: "Aja, Sector 9",
+                location: [30.74294719406856, 76.78986543250615],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipNHAoTYFKO3dPrtaAvNs4VK9Wzd1t9Zl3lxERec=w400-h400-k-no",
+                description: "Chic, contemporary space offering a healthy menu of fresh & organic dishes from around the world.",
+                price: "high",
+                openingHours: "10:30 AM – 11:30 PM",
+                rating: "4.3/5"
+            },
+            {
+                id: 41,
+                name: "Brothers Amritsari Kulcha Hub, Sector 9",
+                location: [30.743169394976583, 76.78969035153654],
+                type: "fastfood",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu0TvmCA6DmxZFFRTz58bd02GyNG13mW_AqukhN0zWmBUHkoAA_Jy0_RnZ1vz9pAWPvn7Bzj92cpWSIdB-SgDC4YciU48XJb0lSoCQ7Xh-zWvt4bLLUfy5ntyXyXh-ST0Z5GXeA=w400-h301-k-no",
+                description: "Famous for its Amritsari Kulcha.",
+                price: "medium",
+                openingHours: "8:30 AM – 10:00 PM",
+                rating: "4.2/5"
+            },
+            {
+                id: 42,
+                name: "Kalsang, Sector 8",
+                location: [30.736231767249507, 76.79541659830427],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipOFGT_QCQ8lroHB3OblZoUkLS37nOcHWU7MiE6-=w400-h225-k-no",
+                description: "Asian restaurant with a menu of Thai, Chinese & Indian dishes in a colorful, casual setting.",
+                price: "high",
+                openingHours: "11:30 AM – 10:00 PM",
+                rating: "4.3/5"
+            },
+            {
+                id: 43,
+                name: "Caffe Sicily, Sector 7",
+                location: [30.73217499150743, 76.80382874292928],
+                type: "cafe",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu2BfDQFGZ7cZBmDe1FYXE1ZGqECg1yJ0XIPWn6nZ461lmxBbIa5_qxBrIuZBaQwRVYdZuw9MLGshevDVXV7dylvYg9noKxcvY-SKXXwELexRI3_3NWZXwuvE4u4FEe8xO5hSisC=w400-h300-k-no",
+                description: "Charming cafe with a menu of Italian & Indian dishes, plus coffee & desserts in a cozy setting.",
+                price: "high",
+                openingHours: "10:30 AM – 11:30 PM",
+                rating: "4.5/5"
+            },
+            {
+                id: 44,
+                name: "Tattlers, Sector 9",
+                location: [30.747235199866694, 76.79352157527774],
+                type: "cafe",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPdkG1k2yefKS5HPmDMiWhpxhqix5EVoNXWlq1l=w400-h375-k-no",
+                description: "Chic cafe with a menu of Italian & Indian dishes, plus coffee & desserts in a cozy setting.",
+                price: "high",
+                openingHours: "11:00 AM – 12:00 AM",
+                rating: "4.4/5"
             }
 
 
