added more to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -1064,6 +1064,62 @@
                 price: "high",
                 openingHours: "11:00 AM – 12:00 AM",
                 rating: "4.4/5"
+            },
+            {
+                id: 45,
+                name: "Siswan Jungle Lodge, Siswan",
+                location: [30.903596584028012, 76.79904291363822],
+                type: "hotels",
+                image: "https://lh3.googleusercontent.com/p/AF1QipNcdDfIJN8mA99Z02xO3DP-FGr5S_zJfWyiaXfD=w400-h267-k-no",
+                description: "Luxury 3 star resort set in a forested area, offering a range of outdoor activities and nature experiences with greating dining options.",
+                price: "medium",
+                openingHours: "24/7",
+                rating: "4.2/5"
+            },
+            {
+                id: 46,
+                name: "The Morni Fort, Panchkula",
+                location: [30.688634211035062, 77.08317395616005],
+                type: "historical",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPvaW6kPXtt7gG9ZBcXoMtciGqTKvUgsGrURh9f=w400-h501-k-no",
+                description: "Picturesque destination featuring rolling hills, a lake area with boating, trails & camping.",
+                price: "low",
+                openingHours: "9 AM – 5 PM",
+                rating: "4.3/5"
+            },
+            {
+                id: 47,
+                name: "Tikkar Taal Resort And Restaurant, Bhoj Balig",
+                location: [30.659808628211284, 77.07557152798955],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipOX7UCL2sv_kAhKtLRbprzgQ5N5qKS9LSSfNevT=w400-h189-k-no",
+                description: "Beautiful located near Tikkar Taal Lake, offering a range of outdoor activities and nature experiences. Dining options are not something to be write about.",
+                price: "medium",
+                rating: "4.0/5"
+            },
+            {
+                id: 48,
+                name: "Cafesserie, Dagshai",
+                location: [30.877569182709806, 77.05781674615132],
+                type: "cafe",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMNv5mVMZY078gh0kmn5nxzeqR_LoYQlRGZwI62=w400-h300-k-no",
+                description: "Charming cafe with a menu of Italian & Indian dishes, plus coffee & desserts in a cozy setting in the hills.",
+                price: "medium",
+                website: "https://cafesserieindia.in/",
+                openingHours: "08:00 AM – 09:00 PM",
+                rating: "4.9/5"
+            },
+            {
+                id: 49,
+                name: "CP 67, Sector 67, SAS Nagar",
+                location: [30.67701269247043, 76.72412634863],
+                type: "shopping",
+                price: "medium",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMhYfuuXGQtoJv-7rUJdEAqWPHDLfBayMgLgSDf=w400-h300-k-no",
+                description: "A large shopping mall with various brands, eateries and a cinema hall.",
+                website: "https://www.cp67.co.in/",
+                openingHours: "09:00 AM - 11:00 PM",
+                rating: "4.5/5"
             }
 
 
