added more to the list.

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore Chandigarh & Tricity with our interactive map! Find top restaurants, cafes, museums, tourist spots, and hidden gems. Perfect for travelers and locals to discover the best places in Chandigarh, Mohali & Panchkula.">
+    <meta name="description" content="Explore Chandigarh & Tricity with our interactive map! Find top restaurants, cafes, museums, tourist spots, and hidden gems. Perfect for travelers and locals to discover the best places in Chandigarh, Mohali & Panchkula. Trusted by Reddit and Quora users.">
     <link rel="stylesheet" href="/css/navbar.css">
     <title>Explore Chandigarh Tricity with Our Interactive Map</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VS2WHLJQNE"></script>
@@ -1120,6 +1120,29 @@
                 website: "https://www.cp67.co.in/",
                 openingHours: "09:00 AM - 11:00 PM",
                 rating: "4.5/5"
+            },
+            {
+                id: 50,
+                name: "7 Pines, Kasauli",
+                location: [30.94689516181041, 76.9547358645697],
+                type: "hotels",
+                image: "https://dynamic-media-cdn.tripadvisor.com/media/photo-o/29/9f/96/a0/7-pines-kasauli-himachal.jpg?w=1900&h=1400&s=1",
+                description: "Luxury resort set in a forested area, offering a range of outdoor activities and nature experiences with great dining options.",
+                price: "medium",
+                openingHours: "24/7",
+                website: "https://7pineskasauli.com/",
+                rating: "4.7/5"
+            },
+            {
+                id: 51,
+                name: "Kaithal Resorts, Dharampur",
+                location: [30.89655850706712, 77.01472538662527],
+                type: "hotels",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMx4pIvoU5pdaMq4_dxtBzxZER8WW6vJiEmcwDj=w400-h300-k-no",
+                description: "Nestled in a quaint area located in Kasauli. It's a picturesque country Resort that is perfect for someone who is looking to take a break from the hustle and bustle of city life. Its vintage rustic interiors with modern amenities promise a comfortable stay.",
+                price: "medium",
+                openingHours: "24/7",
+                rating: "4.7/5"
             }
 
 
