added more to the list.

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -1143,6 +1143,16 @@
                 price: "medium",
                 openingHours: "24/7",
                 rating: "4.7/5"
+            },
+            {
+                id: 52,
+                name: "Barog Station, Barog",
+                location: [30.890237504164745, 77.082128901129],
+                type: "historical",
+                image: "https://lh3.googleusercontent.com/p/AF1QipP9yqF8koNZSFptDRjKutxQfSaipJoP_EGB18Vw=w400-h300-k-no",
+                description: "A small historic hill station with a railway station, offering scenic views and a peaceful atmosphere. This world heritage site is one of the most happening stations on the Shimla Kalka route. Don't forget to buy 10 rs platform ticket and keep it as a souvenir.",
+                openingHours: "9:00 AM – 8:00 PM",
+                rating: "4.7/5"
             }
 
 
