added more to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -1153,6 +1153,17 @@
                 description: "A small historic hill station with a railway station, offering scenic views and a peaceful atmosphere. This world heritage site is one of the most happening stations on the Shimla Kalka route. Don't forget to buy 10 rs platform ticket and keep it as a souvenir.",
                 openingHours: "9:00 AM – 8:00 PM",
                 rating: "4.7/5"
+            },
+            {
+                id: 53,
+                name: "Hops n Grains The Microbrewery, Sector 9, Panchkula",
+                location: [30.697615938210866, 76.84938909896319],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipP7rzcexzrQNpeFNfwAx_dURoe1ZdxNGjaraltx=w400-h261-k-no",
+                description: "Microbrewery with a menu of international dishes & craft beers in a casual setting.",
+                openingHours: "12:00 PM – 12:00 AM",
+                price: "medium",
+                rating: "4.5/5"
             }
 
 
