added more to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -1164,7 +1164,41 @@
                 openingHours: "12:00 PM – 12:00 AM",
                 price: "medium",
                 rating: "4.5/5"
-            }
+            },
+            {
+                id: 54,
+                name: "Yadavindra Gardens, Pinjore",
+                location: [30.794095738736804, 76.91473972845009],
+                type: "park",
+                price: "low",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMqUpQKddBTmN6ZFcjd5RxtxUO_Petsejh0GKSe=w400-h299-k-no",
+                description: "Beautiful Mughal-style gardens with terraced lawns, fountains & a mini zoo.",
+                openingHours: "07:00 AM – 09:30 PM",
+                rating: "4.3/5"
+            },
+            {
+                id: 55,
+                name: "Timber Trail Resort, Parwanoo",
+                location: [30.835790028667063, 76.98194725690223],
+                type: "hotels",
+                price: "high",
+                image: "https://lh3.googleusercontent.com/p/AF1QipM6a5m_5LPRf7cFHhiR8WOyj8Fndm2YFrTg2wjA=w400-h225-k-no",
+                description: "Timber Trail is a 3 star hotel located in Parwanoo, Himachal Pradesh. It is a popular destination for tourists looking for a peaceful getaway in the hills and is known for its scenic views and natural beauty and lift. This was one of the first hotels in the region and is still a popular choice for travelers.",
+                website: "https://www.timbertrail.in/",
+                rating: "4.3/5"
+            },
+            {
+                id: 56,
+                name: "The Brew Estate, Sector 80, SAS Nagar",
+                location: [30.6778605406037, 76.72200923663286],
+                type: "restaurant",
+                image: "https://lh3.googleusercontent.com/p/AF1QipNvNPUiMBolhPY5lNCLnrdJBxpggufUsaG5_GuN=w400-h266-k-no",
+                description: "Microbrewery with a menu of international dishes & craft beers in a casual setting.",
+                website: "https://brewestate.in/the-brew-estate-sector-80-mohali.php",
+                openingHours: "11:00 AM – 11:30 PM",
+                price: "high",
+                rating: "4.5/5"
+            },
 
 
         ];
