added more to the list

--- a/app/chandigarh-tourist-map/home.html
+++ b/app/chandigarh-tourist-map/home.html
@@ -1372,6 +1372,134 @@
                 image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu3wUHRO87hMgIQnHwYmcn2oKfnQr_EfJ636UleBU_feTKIHFc1Pe8eNO3gp_EyIrB83oLONlIc3ukg6yyMVfPeQqfIGmGCRWy5-gB6D5Byp_7tmB6fR5wsSMpZVBLObevN5oDVc=w400-h318-k-no",
                 description: "Football field with Astroturf, located inside the Rainbow International School.",
                 rating: "4.5/5"
+            },
+            {
+                id: 73,
+                name: "Royal Cue Club Pool & Snooker, Sector 28",
+                location: [30.71958296141629, 76.80162497982877],
+                type: "activities",
+                price: "medium",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu0FrSwd_83J0R9eWvfmB0_ovQKbAWiulLBbmv8XD67yu-19mGnuPcQXr05RXM9KeyYXM8wZoLZq8conTqft4Zr3_HglRLYm7k9XZlDCu9BHxAVA9PMkl4i9tXeWE01ucpVQ1dM=w400-h711-k-no",
+                description: "Royal Cue Club is a popular budget friendly destination for billiards and snooker enthusiasts. The club offers well-maintained tables and a friendly atmosphere for players of all skill levels.",
+                rating: "4.0/5"
+            },
+            {
+                id: 74,
+                name: "Smaaash, Berkeley Square, Industrial Area Phase 1",
+                location: [30.711315976818042, 76.80852917421501],
+                type: "activities",
+                price: "high",
+                website: "https://smaaash-entertainment.in/",
+                openingHours: "11 AM – 11 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPzjA6CopUfs6dF2-ivr40kmc94yUGDm12kW24K=w400-h711-k-no",
+                description: "From cutting-edge virtual reality marvels to classic arcade favorites, experience the ultimate gaming extravaganza, catering to every taste and age, ensuring an unforgettable vibe for everyone who steps in. It's popular for its bowling alley.",
+                rating: "4.6/5"
+            },
+            {
+                id: 75,
+                name: "LXG - League of Extraordinary Gamers, Sector 36",
+                location: [30.734035251078787, 76.75285927420207],
+                type: "activities",
+                price: "high",
+                website: "https://www.instagram.com/lxgchandigarh",
+                openingHours: "09:30 AM – 12:00 AM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipOd8IleAY3Ool6ayYoX0i1R5F-yMOb6J-T4DX4i=w400-h533-k-no",
+                description: "Gaming lounge with a variety of games, including PC and console gaming, VR experiences, and more.",
+                rating: "5/5"
+            },
+            {
+                id: 76,
+                name: "Trail Walking, Sukhna Lake",
+                location: [30.748741798120736, 76.81202425045983],
+                type: "activities",
+                price: "low",
+                openingHours: "06:00 AM – 06:00 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipP1WBZVWSUd_74POWsTzQEjyQo3ROSoSnMG7F8_=w400-h300-k-no",
+                description: "Beautiful walking trail around Sukhna Lake, perfect for a leisurely stroll or jog.",
+                rating: "4.8/5"
+            },
+            {
+                id: 77,
+                name: "Mystery Rooms, Sector 35",
+                location: [30.72010503323334, 76.75782173035083],
+                type: "activities",
+                price: "medium",
+                website: "https://www.mysteryrooms.in/",
+                openingHours: "11:00 AM – 11:00 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPbENhoJ6rcDFThbXjHbM3m-BLnbWjh4ZVYSyib=w400-h533-k-no",
+                description: "This mystery room game is an immersive and thrilling experience that keeps you on edge from start to finish. The intricate puzzles are cleverly designed, striking the perfect balance between challenging and rewarding. The storyline is engaging, with twists and surprises that enhance the atmosphere. Attention to detail in the room’s decor and props adds a realistic touch, drawing players deeper into the mystery. The game flows seamlessly, with helpful yet subtle hints available when needed. Perfect for both seasoned escape room enthusiasts and newcomers, this game promises an hour of teamwork, excitement, and a satisfying sense of accomplishment",
+                rating: "4.6/5"
+            },
+            {
+                id: 78,
+                name: "HopUp, Zirakpur",
+                location: [30.623533300464, 76.82576698016948],
+                type: "activities",
+                price: "medium",
+                website: "https://hopupindia.com/chandigarh/",
+                openingHours: "11:00 AM – 11:00 PM",
+                image: "https://lh3.googleusercontent.com/gpms-cs-s/AIMqDu1jhds8yzdDdywqfZm70nT7GwcabEVItEqmqV1PWGE3fbq8-zQJfuyUhcXlaOs2_v2lB67s5z2dj3GrnY6_T9t1qOuwWOu4zj_q2ZfSisd_7CA1lFgM6zRgQyoZHxTDQl4f0IL_=w400-h533-k-no",
+                description: "HopUp is a trampoline park that offers a fun and active experience for all ages. With a variety of trampolines, foam pits, GoKarting and obstacle courses, it's a great place to jump around and have a blast. The park also hosts events and parties, making it a popular destination for families and friends looking for an exciting day out.",
+                rating: "4.8/5"
+            },
+            {
+                id: 79,
+                name: "Decathlon, Zirakpur",
+                location: [30.619126394631046, 76.82425731669505],
+                type: "shopping",
+                price: "medium",
+                image: "https://lh3.googleusercontent.com/p/AF1QipPZlkWFFOIOw1IfTJQY3B6nvXuYZsjrb3R8JuO1=w400-h186-k-no",
+                description: "Decathlon is a popular sports and outdoor equipment store that offers a wide range of products for various sports and activities. From clothing to gear, Decathlon provides everything you need for an active lifestyle. The store is known for its affordable prices and quality products, making it a go-to destination for sports enthusiasts.",
+                website: "http://www.decathlon.in/",
+                openingHours: "10:00 AM - 09:00 PM",
+                rating: "4.6/5"
+            },
+            {
+                id: 80,
+                name: "Chandigarh Golf Association Golf Range, Sector 6",
+                location: [30.735609000160746, 76.82558485868105],
+                type: "activities",
+                price: "high",
+                openingHours: "7 AM – 7 PM",
+                website: "http://www.cgaonline.in/",
+                image: "https://lh3.googleusercontent.com/p/AF1QipM9xGp2ZLUh4nXqXNTwtp3ZCzBwcsp-O916Xbc5=w400-h309-k-no",
+                description: "Chandigarh Golf Association Golf Range is a premier golf destination in Chandigarh. The range features well-maintained facilities for golfers of all skill levels. It's a great place to practice your swing and enjoy the sport of golf. It's a member only club.",
+                rating: "4.3/5"
+            },
+            {
+                id: 81,
+                name: "Subzero Fitness Gym, Sector 9",
+                location: [30.745457954479722, 76.78728072677556],
+                type: "activities",
+                price: "high",
+                openingHours: "6 AM – 10 PM",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMFw3Q6Yt_ALFMo6joVirmpd53dUAVEaxh8azX6=w400-h225-k-no",
+                description: "Subzero Fitness is a premium fitness center that offers a range of facilities and services for health and wellness. With state-of-the-art equipment, group classes, and personal training options, it's a great place to achieve your fitness goals. The center provides a motivating environment for individuals looking to stay active and healthy.",
+                rating: "4.5/5"
+            },
+            {
+                id: 81,
+                name: "BodyZone Gym, Sector 9",
+                location: [30.741334202603447, 76.79092739723016],
+                type: "activities",
+                price: "high",
+                openingHours: "6 AM – 10 PM",
+                website: "https://www.bodyzonegym.in/",
+                image: "https://lh3.googleusercontent.com/p/AF1QipNN6INsorsQibUpdwg5ddVqXK6FeCOEyhHcktOY=w400-h500-k-no",
+                description: "BodyZone Gym is a popular fitness center that offers a range of facilities and services for health and wellness. With state-of-the-art equipment, group classes, and personal training options, it's a great place to achieve your fitness goals. The center provides a motivating environment for individuals looking to stay active and healthy.",
+                rating: "4.8/5"
+            },
+            {
+                id: 82,
+                name: "Burn Gym, Sector 8, Panchkula",
+                location: [30.70077929097765, 76.84916363399313],
+                type: "activities",
+                price: "high",
+                openingHours: "6 AM – 10 PM, Sunday closed",
+                website: "https://www.burngym.com/panchkula-gym-sector8",
+                image: "https://lh3.googleusercontent.com/p/AF1QipMbdr-KLKMyOh4i_CoFxZXgWwLmbn4StL9pAEW6=w400-h266-k-no",
+                description: "Burn Gym is a popular fitness center that offers a range of facilities and services for health and wellness. With state-of-the-art equipment, group classes, and personal training options, it's a great place to achieve your fitness goals. The center provides a motivating environment for individuals looking to stay active and healthy.",
+                rating: "4.7/5"
             }
 
         ];
